...
        app:layout_goneMarginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/exo_player_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_step_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background_light"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
...
