...
            android:text="@string/steps_list_title"
            app:layout_constraintTop_toBottomOf="@id/exo_player_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/round_background_light"
            app:layout_constraintStart_toStartOf="@id/tv_steps_list_title"
...
